--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "WhoApp",
-    "slug": "WhoApp",
+    "name": "ProjectApp103",
+    "slug": "ProjectApp103",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
